--- a/config_usavCoaches.json
+++ b/config_usavCoaches.json
@@ -74,7 +74,7 @@
         "Appalachian State University",
         "Arizona State University",
         "Arkansas State University",
-        "#Army",
+        "United States Military Academy",
         "Auburn University",
         "Aurora University",
         "Babson College",
@@ -85,7 +85,7 @@
         "Bellarmine University",
         "Bemidji State University",
         "Bentley University",
-        "Binghamton University",
+         "SUNY Binghamton",
         "Biola University",
         "Black Hills State University",
         "Boston College",
@@ -104,16 +104,17 @@
         "California University of Pennsylvania",
         "Campbell University",
         "Carnegie Mellon University",
-        "Carroll University",
+        "Carroll University (WI)",
         "Central Michigan University",
-        "Chaminade University of Honolulu",
+        "Chaminade University",
         "Clemson University",
         "Coastal Carolina University",
-        "Coker College",
+        "Coker University",
         "Colby College",
         "Colgate University",
         "Colorado Christian University",
         "Colorado College",
+        "Colorado Mesa University",
         "Colorado School of Mines",
         "Colorado State University",
         "Columbia University",
@@ -126,15 +127,16 @@
         "Daemen College",
         "Dartmouth College",
         "Davidson College",
-        "Depaul University",
+        "DePaul University",
         "Dominican University of California",
         "Duke University",
         "Earlham College",
         "East Carolina University",
         "East Tennessee State University",
+        "Eastern Illinois University",
         "Eastern Kentucky University",
         "Eastern Wyoming College",
-        "Elmhurst College",
+        "Elmhurst University",
         "Elon University",
         "Emerson College",
         "Emory University",
@@ -159,7 +161,7 @@
         "Idaho State University",
         "Illinois State University",
         "Illinois Wesleyan University",
-        "Indiana Institute of Technology",
+        "Indiana Tech",
         "Indiana University, Bloomington",
         "Indiana University of Pennsylvania",
         "Iona University",
@@ -171,8 +173,9 @@
         "Kennesaw State University",
         "Kent State University",
         "Lafayette College",
-        "Lakeland University",
+        "Lakeland University (WI)",
         "Lamar University",
+        "Lawrence University",
         "Lehigh University",
         "Lewis-Clark State College",
         "Lewis & Clark College",
@@ -190,7 +193,7 @@
         "Marist College",
         "Marquette University",
         "Marshall University",
-        "Mcneese State University",
+        "McNeese State University",
         "Miami University (OH)",
         "Michigan State University",
         "Michigan Technological University",
@@ -199,11 +202,11 @@
         "Missouri University of Science and Technology",
         "Missouri State University",
         "Mitchell College",
-        "Monmouth College",
+        "Monmouth College (IL)",
         "Montana State University, Bozeman",
         "Morgan State University",
         "Murray State University",
-        "#Navy (Naval Academy)",
+        "United States Naval Academy",
         "New Mexico State University",
         "North Carolina State University",
         "North Dakota State University",
@@ -213,8 +216,9 @@
         "Northern Michigan University",
         "Northwest Nazarene University",
         "Northwest University",
-        "Northwestern State University of Louisiana",
+        "Northwestern State University",
         "Northwestern University",
+        "Oakland University",
         "Ohio State University",
         "Ohio University",
         "Old Dominion University",
@@ -227,11 +231,11 @@
         "Portland State University",
         "Princeton University",
         "Providence College",
-        "Purdue University Fort Wayne",
+        "Purdue University",
         "Quincy University",
         "Rhodes College",
         "Rice University",
-        "Robert Morris University",
+        "Robert Morris University (PA)",
         "Rutgers University, New Brunswick",
         "Saint Louis University",
         "Sam Houston State University",
@@ -247,21 +251,24 @@
         "Skidmore College",
         "South Dakota School of Mines & Technology",
         "Southeast Missouri State University",
+        "Spring Hill College",
         "Stanford University",
         "Stonehill College",
         "Stony Brook University",
-        "SUNY at Buffalo",
+        "SUNY Buffalo State",
         "Swarthmore College",
         "Syracuse University",
+        "Tarleton State University",
         "Texas A&M University, College Station",
         "Texas A&M University, Commerce",
         "Texas A&M University, Corpus Christi",
         "Texas Christian University",
-        "Texas State University",
+        "Texas State University, San Marcos",
         "Texas Tech University",
         "Texas Woman's University",
         "University of Montana",
-        "University of Tennessee",
+        "University of Tennessee at Chattanooga",
+        "University of Texas at Arlington",
         "University of Texas at El Paso",
         "University of Texas at San Antonio",
         "University of Texas at Tyler",
@@ -272,14 +279,13 @@
         "Tufts University",
         "Tulane University",
         "United States Air Force Academy",
-        "United States Coast Guard Acad.",
+        "United States Coast Guard Academy",
         "United States Merchant Marine Academy",
         "University of Akron",
         "University of Alabama",
-        "University of Alabama",
         "University of Alaska Anchorage",
         "University of Arizona",
-        "University of Arkansas",
+        "University of Arkansas, Fayetteville",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Irvine",
@@ -321,23 +327,27 @@
         "University of Northern Colorado",
         "University of Northern Iowa",
         "University of Oregon",
+        "University of Pennsylvania",
+        "University of Portland",
         "University of San Diego",
         "University of San Francisco",
         "University of South Carolina, Columbia",
         "University of South Dakota",
         "University of Southern California",
         "University of Southern Mississippi",
-        "University of St. Thomas",
-        "University of The Incarnate Word",
-        "University of The Pacific",
+        "University of St. Thomas (MN)",
+        "University of the Incarnate Word",
+        "University of the Pacific",
         "University of Toledo",
         "University of Washington",
         "University of Wisconsin, Madison",
         "University of Wisconsin, Milwaukee",
+        "University of Wyoming",
         "University at Albany",
         "University of Central Arkansas",
         "University of Central Florida",
         "University of Chicago",
+        "University of Cincinnati",
         "University of Dayton",
         "University of Houston",
         "University of Kansas",
@@ -356,7 +366,7 @@
         "University of Rochester",
         "University of South Florida",
         "University of Texas at Austin",
-        "University of The South",
+        "Sewanee, The University of the South",
         "University of Tulsa",
         "University of Utah",
         "University of Virginia",
@@ -378,7 +388,7 @@
         "Western Illinois University",
         "Western Kentucky University",
         "Wichita State University",
-        "William and Mary",
+        "College of William and Mary",
         "Winthrop University",
         "Wisconsin Lutheran College",
         "Xavier University of Louisiana",
