--- a/config_usavCoaches.json
+++ b/config_usavCoaches.json
@@ -83,6 +83,7 @@
         "Bard College",
         "Baylor University",
         "Bellarmine University",
+        "Belmont University",
         "Bemidji State University",
         "Bentley University",
          "SUNY Binghamton",
@@ -112,6 +113,7 @@
         "Coker University",
         "Colby College",
         "Colgate University",
+        "College of Charleston (SC)",
         "Colorado Christian University",
         "Colorado College",
         "Colorado Mesa University",
@@ -189,6 +191,7 @@
         "Loyola Marymount University",
         "Loyola University Chicago",
         "Macalester College",
+        "Manhattan College",
         "Marian University",
         "Marist College",
         "Marquette University",
@@ -259,6 +262,7 @@
         "Swarthmore College",
         "Syracuse University",
         "Tarleton State University",
+        "Tennessee Technological University",
         "Texas A&M University, College Station",
         "Texas A&M University, Commerce",
         "Texas A&M University, Corpus Christi",
@@ -267,6 +271,7 @@
         "Texas Tech University",
         "Texas Woman's University",
         "University of Montana",
+        "University of Tennessee, Knoxville",
         "University of Tennessee at Chattanooga",
         "University of Texas at Arlington",
         "University of Texas at El Paso",
@@ -293,6 +298,7 @@
         "University of California, Riverside",
         "University of California, San Diego",
         "University of California, Santa Barbara",
+        "University of California, Santa Cruz",
         "University of Colorado, Boulder",
         "University of Colorado, Colorado Springs",
         "University of Connecticut",
@@ -387,12 +393,15 @@
         "Western Carolina University",
         "Western Illinois University",
         "Western Kentucky University",
+        "Western Michigan University",
         "Wichita State University",
         "College of William and Mary",
         "Winthrop University",
         "Wisconsin Lutheran College",
+        "Wright State University",
         "Xavier University of Louisiana",
         "Yale University",
+        "Youngstown State University",
         "#TBD",
         "#All"
     ],
