--- a/config_usavCoaches.json
+++ b/config_usavCoaches.json
@@ -159,6 +159,7 @@
         "Haverford College",
         "Hendrix College",
         "Hope College",
+        "Houston Christian University",
         "Howard University",
         "Idaho State University",
         "Illinois State University",
@@ -197,6 +198,7 @@
         "Marquette University",
         "Marshall University",
         "McNeese State University",
+        "McPherson College",
         "Miami University (OH)",
         "Michigan State University",
         "Michigan Technological University",
