--- a/config_usavCoaches.json
+++ b/config_usavCoaches.json
@@ -86,13 +86,14 @@
         "Belmont University",
         "Bemidji State University",
         "Bentley University",
-         "SUNY Binghamton",
+        "SUNY Binghamton",
         "Biola University",
         "Black Hills State University",
         "Boston College",
         "Bowdoin College",
         "Bradley University",
         "Brigham Young University",
+        "Brown University",
         "Butler University",
         "California Baptist University",
         "California Polytechnic State University",
@@ -149,7 +150,7 @@
         "George Mason University",
         "Georgetown University",
         "Georgia Southern University",
-        "Georgia Tech.",
+        "Georgia Institute of Technology",
         "Graceland University",
         "Grand Canyon University",
         "Grand Valley State University",
@@ -158,19 +159,24 @@
         "Harvard University",
         "Haverford College",
         "Hendrix College",
+        "High Point University",
+        "Hobart & William Smith Colleges",
         "Hope College",
         "Houston Christian University",
         "Howard University",
         "Idaho State University",
+        "Illinois Institute of Technology",
         "Illinois State University",
         "Illinois Wesleyan University",
         "Indiana Tech",
         "Indiana University, Bloomington",
+        "Indiana University - Purdue University Indianapolis",
         "Indiana University of Pennsylvania",
         "Iona University",
         "Iowa State University",
         "Jacksonville State University",
         "Jacksonville University",
+        "James Madison University",
         "Juniata College",
         "Kansas State University",
         "Kennesaw State University",
@@ -179,10 +185,13 @@
         "Lakeland University (WI)",
         "Lamar University",
         "Lawrence University",
+        "Le Moyne College",
         "Lehigh University",
         "Lewis-Clark State College",
         "Lewis & Clark College",
         "Liberty University",
+        "Limestone University",
+        "Lindenwood University",
         "Lipscomb University",
         "Long Island University",
         "Loras College",
@@ -193,12 +202,13 @@
         "Loyola University Chicago",
         "Macalester College",
         "Manhattan College",
-        "Marian University",
+        "Marian University (IN)",
         "Marist College",
         "Marquette University",
         "Marshall University",
         "McNeese State University",
         "McPherson College",
+        "Metropolitan State University of Denver",
         "Miami University (OH)",
         "Michigan State University",
         "Michigan Technological University",
@@ -224,6 +234,7 @@
         "Northwestern State University",
         "Northwestern University",
         "Oakland University",
+        "Oglethorpe University",
         "Ohio State University",
         "Ohio University",
         "Old Dominion University",
@@ -237,11 +248,13 @@
         "Princeton University",
         "Providence College",
         "Purdue University",
+        "Queens University of Charlotte",
         "Quincy University",
         "Rhodes College",
         "Rice University",
         "Robert Morris University (PA)",
         "Rutgers University, New Brunswick",
+        "Sacred Heart University",
         "Saint Louis University",
         "Sam Houston State University",
         "Samford University",
@@ -264,6 +277,7 @@
         "Swarthmore College",
         "Syracuse University",
         "Tarleton State University",
+        "Temple University",
         "Tennessee Technological University",
         "Texas A&M University, College Station",
         "Texas A&M University, Commerce",
@@ -318,6 +332,7 @@
         "University of Louisiana",
         "University of Maryland, College Park",
         "University of Massachusetts, Boston",
+        "University of Miami (FL)",
         "University of Michigan",
         "University of Minnesota, Twin Cities",
         "University of Mississippi",
@@ -339,6 +354,7 @@
         "University of Portland",
         "University of San Diego",
         "University of San Francisco",
+        "University of South Alabama",
         "University of South Carolina, Columbia",
         "University of South Dakota",
         "University of Southern California",
@@ -384,12 +400,13 @@
         "Utah State University",
         "Utah Valley University",
         "Vanderbilt University",
+        "Vassar College",
         "Villanova University",
         "Virginia Commonwealth University",
-        "Virginia Tech",
+        "Virginia Polytechnic Institute & State University",
         "Wake Forest University",
         "Washington State University",
-        "Wesleyan University",
+        "Wesleyan University (CT)",
         "West Texas A&M University",
         "West Virginia University",
         "Western Carolina University",
