--- a/config_usavCoaches.json
+++ b/config_usavCoaches.json
@@ -68,7 +68,9 @@
     "collegelist" : [
         "# filter for college details from state/college list (more web, more time, specific):",
         "# list of specific colleges or All, start with # to disable that line",
+        "Academy of Art University",
         "Alverno College",
+        "American University",
         "Amherst College",
         "Angelo State University",
         "Appalachian State University",
@@ -76,7 +78,9 @@
         "Arkansas State University",
         "United States Military Academy",
         "Auburn University",
+        "Augustana College (IL)",
         "Aurora University",
+        "Austin Peay State University",
         "Babson College",
         "Baldwin Wallace University",
         "Ball State University",
@@ -91,14 +95,17 @@
         "Black Hills State University",
         "Boston College",
         "Bowdoin College",
+        "Bowling Green State University",
         "Bradley University",
         "Brigham Young University",
         "Brown University",
+        "Bucknell University",
         "Butler University",
         "California Baptist University",
         "California Polytechnic State University",
         "California State University, Bakersfield",
         "California State University, Fresno",
+        "California State University, Fullerton",
         "California State University - Long Beach",
         "California State University, Monterey Bay",
         "California State University, Northridge",
@@ -115,6 +122,7 @@
         "Colby College",
         "Colgate University",
         "College of Charleston (SC)",
+        "College of the Holy Cross",
         "Colorado Christian University",
         "Colorado College",
         "Colorado Mesa University",
@@ -128,28 +136,39 @@
         "Creighton University",
         "Cumberland University",
         "Daemen College",
+        "Dallas Baptist University",
         "Dartmouth College",
         "Davidson College",
         "DePaul University",
         "Dominican University of California",
         "Duke University",
+        "Duquesne University",
         "Earlham College",
         "East Carolina University",
         "East Tennessee State University",
         "Eastern Illinois University",
         "Eastern Kentucky University",
+        "Eastern Michigan University",
         "Eastern Wyoming College",
         "Elmhurst University",
         "Elon University",
+        "Embry-Riddle Aeronautical University",
         "Emerson College",
         "Emory University",
+        "Fairfield University",
+        "Fairleigh Dickinson University, Metropolitan",
+        "Florida Gulf Coast University",
         "Florida Institute of Technology",
         "Florida International University",
         "Florida State University",
+        "Fordham University",
         "Furman University",
+        "Gardner-Webb University",
         "George Mason University",
+        "George Washington University",
         "Georgetown University",
         "Georgia Southern University",
+        "Georgia State University",
         "Georgia Institute of Technology",
         "Graceland University",
         "Grand Canyon University",
@@ -157,6 +176,7 @@
         "Grinnell College",
         "Hamilton College",
         "Harvard University",
+        "Hastings College",
         "Haverford College",
         "Hendrix College",
         "High Point University",
@@ -166,6 +186,7 @@
         "Howard University",
         "Idaho State University",
         "Illinois Institute of Technology",
+        "Indiana State University",
         "Illinois State University",
         "Illinois Wesleyan University",
         "Indiana Tech",
@@ -186,12 +207,14 @@
         "Lamar University",
         "Lawrence University",
         "Le Moyne College",
+        "Lee University",
         "Lehigh University",
         "Lewis-Clark State College",
         "Lewis & Clark College",
         "Liberty University",
         "Limestone University",
         "Lindenwood University",
+        "Lindsey Wilson College",
         "Lipscomb University",
         "Long Island University",
         "Loras College",
@@ -200,14 +223,18 @@
         "Lourdes University",
         "Loyola Marymount University",
         "Loyola University Chicago",
+        "Loyola University Maryland",
         "Macalester College",
         "Manhattan College",
         "Marian University (IN)",
         "Marist College",
         "Marquette University",
         "Marshall University",
+        "McDaniel College",
+        "McKendree University",
         "McNeese State University",
         "McPherson College",
+        "Mercer University",
         "Metropolitan State University of Denver",
         "Miami University (OH)",
         "Michigan State University",
@@ -216,17 +243,24 @@
         "Mississippi State University",
         "Missouri University of Science and Technology",
         "Missouri State University",
+        "Missouri Western State University",
         "Mitchell College",
         "Monmouth College (IL)",
         "Montana State University, Bozeman",
+        "Morehead State University",
         "Morgan State University",
+        "Mount St. Joseph University",
         "Murray State University",
         "United States Naval Academy",
         "New Mexico State University",
+        "New York University",
+        "Niagara University",
         "North Carolina State University",
+        "North Central College",
         "North Dakota State University",
         "North Park University",
         "Northeastern University",
+        "Northern Illinois University",
         "Northern Kentucky University",
         "Northern Michigan University",
         "Northwest Nazarene University",
@@ -234,19 +268,24 @@
         "Northwestern State University",
         "Northwestern University",
         "Oakland University",
+        "Oberlin College",
         "Oglethorpe University",
         "Ohio State University",
         "Ohio University",
         "Old Dominion University",
         "Oregon State University",
         "Palm Beach Atlantic University",
+        "Panola College",
         "Pennsylvania State University",
         "Pepperdine University",
         "Point Loma Nazarene University",
         "Pomona-Pitzer Colleges",
         "Portland State University",
+        "Prairie View A&M University",
         "Princeton University",
         "Providence College",
+        "Purdue University",
+        "Purdue University Northwest",
         "Purdue University",
         "Queens University of Charlotte",
         "Quincy University",
@@ -255,6 +294,8 @@
         "Robert Morris University (PA)",
         "Rutgers University, New Brunswick",
         "Sacred Heart University",
+        "St. Ambrose University",
+        "St. Edward's University",
         "Saint Louis University",
         "Sam Houston State University",
         "Samford University",
@@ -267,10 +308,20 @@
         "Seton Hall University",
         "Siena College",
         "Skidmore College",
+        "Smith College",
         "South Dakota School of Mines & Technology",
+        "South Dakota State University",
         "Southeast Missouri State University",
+        "Southeastern Louisiana University",
+        "Southern Illinois University at Carbondale",
+        "Southern Illinois University Edwardsville",
+        "Southern Methodist University",
+        "Southern Utah University",
+        "Southwestern University (TX)",
         "Spring Hill College",
+        "St. Mary's University (TX)",
         "Stanford University",
+        "Stephen F. Austin State University",
         "Stonehill College",
         "Stony Brook University",
         "SUNY Buffalo State",
@@ -279,6 +330,7 @@
         "Tarleton State University",
         "Temple University",
         "Tennessee Technological University",
+        "Texas A&M International University",
         "Texas A&M University, College Station",
         "Texas A&M University, Commerce",
         "Texas A&M University, Corpus Christi",
@@ -297,6 +349,7 @@
         "Towson University",
         "Trevecca Nazarene University",
         "Troy University",
+        "Truman State University",
         "Tufts University",
         "Tulane University",
         "United States Air Force Academy",
@@ -307,6 +360,7 @@
         "University of Alaska Anchorage",
         "University of Arizona",
         "University of Arkansas, Fayetteville",
+        "University of Arkansas, Little Rock",
         "University of California, Berkeley",
         "University of California, Davis",
         "University of California, Irvine",
@@ -326,10 +380,12 @@
         "University of Hawaii, Manoa",
         "University of Idaho",
         "University of Illinois, Chicago",
+        "University of Illinois, Springfield",
         "University of Illinois, Champaign",
         "University of Iowa",
         "University of Kentucky",
         "University of Louisiana",
+        "University of Louisiana at Monroe",
         "University of Maryland, College Park",
         "University of Massachusetts, Boston",
         "University of Miami (FL)",
@@ -337,6 +393,7 @@
         "University of Minnesota, Twin Cities",
         "University of Mississippi",
         "University of Missouri, Columbia",
+        "University of Missouri, Kansas City",
         "University of Nebraska, Lincoln",
         "University of Nevada, Las Vegas",
         "University of Nevada",
@@ -344,9 +401,11 @@
         "University of New Haven",
         "University of New Mexico",
         "University of New Orleans",
+        "University of North Carolina, Wilmington",
         "University of North Carolina at Charlotte",
         "University of North Carolina, Greensboro",
         "University of North Dakota",
+        "University of North Texas",
         "University of Northern Colorado",
         "University of Northern Iowa",
         "University of Oregon",
@@ -354,10 +413,12 @@
         "University of Portland",
         "University of San Diego",
         "University of San Francisco",
+        "University of Science and Arts of Oklahoma",
         "University of South Alabama",
         "University of South Carolina, Columbia",
         "University of South Dakota",
         "University of Southern California",
+        "University of Southern Indiana",
         "University of Southern Mississippi",
         "University of St. Thomas (MN)",
         "University of the Incarnate Word",
@@ -366,6 +427,7 @@
         "University of Washington",
         "University of Wisconsin, Madison",
         "University of Wisconsin, Milwaukee",
+        "University of Wisconsin, Parkside",
         "University of Wyoming",
         "University at Albany",
         "University of Central Arkansas",
@@ -387,6 +449,7 @@
         "University of Oklahoma",
         "University of Pittsburgh",
         "University of Puget Sound",
+        "University of Rhode Island",
         "University of Rochester",
         "University of South Florida",
         "University of Texas at Austin",
@@ -396,6 +459,7 @@
         "University of Virginia",
         "University of West Georgia",
         "University of Wisconsin, Eau Claire",
+        "University of Wisconsin, Oshkosh",
         "University of Wisconsin, Stevens Point",
         "Utah State University",
         "Utah Valley University",
@@ -403,21 +467,27 @@
         "Vassar College",
         "Villanova University",
         "Virginia Commonwealth University",
+        "Virginia State University",
         "Virginia Polytechnic Institute & State University",
         "Wake Forest University",
         "Washington State University",
+        "Weber State University",
         "Wesleyan University (CT)",
         "West Texas A&M University",
         "West Virginia University",
+        "Westcliff University",
         "Western Carolina University",
         "Western Illinois University",
         "Western Kentucky University",
         "Western Michigan University",
         "Wichita State University",
         "College of William and Mary",
+        "William Penn University",
+        "Wingate University",
         "Winthrop University",
         "Wisconsin Lutheran College",
         "Wright State University",
+        "Xavier University",
         "Xavier University of Louisiana",
         "Yale University",
         "Youngstown State University",
